Add logging for event processing in query and audit consumers